--- a/angular01/views/board.ejs
+++ b/angular01/views/board.ejs
@@ -282,6 +282,7 @@
 <script src="/libs/jquery/jquery.min.js"></script>
 <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
 <script src="/libs/angular/angular.js"></script>
+<script src="/libs/xss/xss.js"></script>
 <script src="/javascripts/controller/board.js"></script>
 </body>
 </html>
