버그수정, angular는 xss 필요없는듯.. xss filter 제거

--- a/angular01/views/header.ejs
+++ b/angular01/views/header.ejs
@@ -9,7 +9,7 @@
                     <span class="subheading" style="font-weight: bold;">Angular + Node Simple Project</span>
                     <span class="subheading" style="font-weight: bold;">Board Management System</span>
                     <hr class="small"><br/>
-                    <button id="newPostBtn" class="custom-button" data-toggle="modal" data-target="#newPostModal">
+                    <button id="newPostBtn" class="custom-button" data-toggle="modal" data-target="#newPostModal" ng-click="initFormData()">
                         <i class="fa fa-fw fa-file-text-o"></i>NEW POST
                     </button>
                 </div>
