--- a/angular01/views/board.ejs
+++ b/angular01/views/board.ejs
@@ -170,15 +170,12 @@
                                    pattern=".{4,}" title="At least 4 characters"
                                    required="required" placeholder="PASSWORD" ng-model="formData.bpassword">
                         </div>
-                    </div>
-
-                    <hr>
-
+                    </div><hr>
                     <div style="float:right;">
-                        <button class="btn btn-default" data-dismiss="modal">CLOSE</button>
                         <button class="btn btn-primary" type="submit">
                             <i class="fa fa-fw fa-floppy-o"></i>REGIST
                         </button>
+                        <button class="btn btn-default" data-dismiss="modal">CLOSE</button>
                     </div>
                 </form>
             </div>
